# finance-insight

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  SECURITY.md  claude-code-prompt.md  pyproject.toml  render.yaml  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  schema.sql
app/blueprints/: analysis.py  brief.py  dashboard.py  journal.py  media.py  portfolio.py  sectors.py  stubs.py  watchlist.py
app/services/: agent.py  ai_brief.py  ai_desk.py  analysis_data.py  cache.py  chart_data.py  dashboard_data.py  fundamentals.py  indicators.py  journal_data.py  macro_calendar.py  market_data.py  news.py  price_stats.py  scorecard_data.py  sectors_data.py  sentiment.py  tape.py  ticker_context.py  user_portfolio.py  watchlist_data.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: analysis.html  base.html  brief.html  coming_soon.html  dashboard.html  index.html  journal.html  portfolio.html  sectors.html  watchlist.html
docs/development-history/: finance-insight-demo.html
jobs/: daily_job.py
scripts/: init_db.py
tests/: test_app.py
